corrected overlap

--- a/src/cards/CardSection.css
+++ b/src/cards/CardSection.css
@@ -35,7 +35,7 @@
     width: 100%;
   }
   .pokerCardContainer {
-    margin-bottom: -38vh;
+    margin-bottom: -46vw;
   }
   .magicCardContainer {
     background: none;
